// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Matches with error snapshot 1`] = `
<div
  className="app"
>
  <div
    className="layout header"
    id="app-header"
  >
    <a
      href="/"
      id="header-link"
      onClick={[Function]}
    >
      Show me them all
    </a>
  </div>
  <div
    className="layout content"
    id="content"
  >
    Something went wrong :(
  </div>
</div>
`;

exports[`Layout Matches with loading snapshot 1`] = `
<div
  className="lds-facebook"
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Layout Matches with snapshot 1`] = `
<div
  className="app"
>
  <div
    className="layout header"
    id="app-header"
  >
    <a
      href="/"
      id="header-link"
      onClick={[Function]}
    >
      Show me them all
    </a>
  </div>
  <div
    className="layout content"
    id="content"
  />
</div>
`;
